test/files/neg/parent-inherited-twice-error.scala
trait A
class B extends A with A
